Ageing plug-in, support for business day only ageing